Bug 482840 - When the app is in tray and you try to open Kast from any other place rather than tray, it will start again and you will have 2 Kasts open at the same time.
Summary: When the app is in tray and you try to open Kast from any other place rather ...
Status: RESOLVED FIXED
Alias: None
Product: kasts
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: bart
URL:
Keywords:
: 501105 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-08 09:07 UTC by Ashkan
Modified: 2025-03-06 18:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ashkan 2024-03-08 09:07:06 UTC
SUMMARY
***
This is not something big but rather annoying in system. when the app is in tray and you try to open Kast from any other place rather than tray, it will start again and you will have 2 Kasts open at the same time.
***

STEPS TO REPRODUCE
1.  Open Kasts
2.  Close Kasts to tray 
3.  Open Kasts again from a dock or Application launcher

OBSERVED RESULT
# You will see that 2 Kasts are open in the tray and they can actually play at the same time.

EXPECTED RESULT
# Opening Kast again from somewhere rather than tray should just make it maximize from tray 

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  
KDE Plasma Version: 5.27.10 
KDE Frameworks Version:  5.115.0
Qt Version: 5.15.12
Kernel: 6.7.7.arch.1.1
Graphic platform: Wayland
Comment 1 bart 2025-03-06 08:03:22 UTC
*** Bug 501105 has been marked as a duplicate of this bug. ***
Comment 2 Bug Janitor Service 2025-03-06 13:42:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/kasts/-/merge_requests/265
Comment 3 bart 2025-03-06 14:27:01 UTC
Git commit a4dd61140145f20a949e9dc07e6384424d655b43 by Bart De Vries.
Committed on 06/03/2025 at 14:14.
Pushed by bdevries into branch 'master'.

Do not open a second instance if app is already running

M  +5    -0    .kde-ci.yml
M  +13   -0    CMakeLists.txt
M  +2    -0    README.md
M  +22   -0    src/main.cpp

https://invent.kde.org/multimedia/kasts/-/commit/a4dd61140145f20a949e9dc07e6384424d655b43
Comment 4 bart 2025-03-06 18:55:56 UTC
Git commit bd338b1a9e63166af8e1802039104123e6e4b1bc by Bart De Vries.
Committed on 06/03/2025 at 18:35.
Pushed by bdevries into branch 'master'.

Properly implement single instance behaviour

M  +12   -4    src/CMakeLists.txt
M  +11   -6    src/main.cpp

https://invent.kde.org/multimedia/kasts/-/commit/bd338b1a9e63166af8e1802039104123e6e4b1bc