Do not open a second instance if app is already running

BUG: 482840